--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Vite App</title>
 </head>
 <body>
-  <van-nav-bar safe-area-inset-top />
+<!--  <van-nav-bar safe-area-inset-top />-->
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <van-number-keyboard safe-area-inset-bottom />
+<!--  <van-number-keyboard safe-area-inset-bottom />-->
 </body>
 </html>
